--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^6.3.10",
+    "path-to-regexp": "^6.2.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-modal-video": "^1.2.9",
