--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-modal-video": "^1.2.9",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.4.0",
+    "react-toastify": "^9.0.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
