--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "jquery": "^3.6.0",
     "path-to-regexp": "^6.2.1",
     "react": "^18.1.0",
+    "react-dimensions": "^1.3.1",
     "react-dom": "^18.1.0",
     "react-modal-video": "^1.2.9",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "react-select": "^5.4.0",
     "react-toastify": "^9.0.8",
+    "react-tooltip": "^4.4.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
